--- a/apps/base/test-cert/kustomization.yaml
+++ b/apps/base/test-cert/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: test-cert
 resources:
-  - ../base/test-cert
+  - test-cert.yaml
