--- a/apps/base/vector/kustomization.yaml
+++ b/apps/base/vector/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: test-cert
+namespace: vector
 resources:
-  - test-cert.yaml
+  - vector.yaml
