--- a/infrastructure/controllers/kube-prometheus-stack/kube-state-metrics-config.yaml
+++ b/infrastructure/controllers/kube-prometheus-stack/kube-state-metrics-config.yaml
@@ -1,4 +1,6 @@
-# prometheus:
+prometheus:
+  prometheusSpec:
+    podMonitorSelectorNilUsesHelmValues: false
 #   ingress: true
 #   ingressClassName: nginx
 #   hosts:
