--- a/apps/base/vector/vector.yaml
+++ b/apps/base/vector/vector.yaml
@@ -41,6 +41,7 @@ spec:
       sources:
         prometheus_metrics:
           type: internal_metrics
+          scrape_interval_secs: 10
         vector_agents:
           address: 0.0.0.0:6000
           type: http_server
@@ -52,6 +53,7 @@ spec:
           type: prometheus_exporter
           inputs:
             - prometheus_metrics
+          address: 0.0.0.0:9598
         broken_kafka:
           type: kafka
           inputs:
