--- a/infrastructure/controllers/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infrastructure/controllers/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -59,6 +59,7 @@ spec:
         podMonitorSelector:
           matchLabels:
             app.kubernetes.io/component: monitoring
+            release: kube-prom-stack
     grafana:
       defaultDashboardsEnabled: false
       adminPassword: flux
