--- a/infrastructure/controllers/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infrastructure/controllers/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -56,10 +56,8 @@ spec:
             cpu: 200m
             memory: 200Mi
         podMonitorNamespaceSelector: { }
-        podMonitorSelector:
-          matchLabels:
-            app.kubernetes.io/component: monitoring
-            release: kube-prom-stack
+        podMonitorSelector: { }
+        podMonitorSelectorNilUsesHelmValues: false
     grafana:
       defaultDashboardsEnabled: false
       adminPassword: flux
