--- a/apps/base/bind9/bind9.yaml
+++ b/apps/base/bind9/bind9.yaml
@@ -1,5 +1,10 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: vector
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: bind9-service
